--- a/01-show-one-element/index.html
+++ b/01-show-one-element/index.html
@@ -6,13 +6,12 @@
 </head>
 <body>
   <h1>DOM Atomic 01</h1>
-
   <p>
     <!-- This is the text shown by default. -->
     The modern mammal metropolis of Zootopia is a city like no other. Comprised of habitat neighborhoods like ritzy Sahara Square and frigid Tundratown, it's a melting pot where animals from every environment live together-a place where no matter what you are, from the biggest elephant to the smallest shrew, you can be anything. But when rookie Officer Judy Hopps (voice of Ginnifer Goodwin) arrives, she discovers that being the first bunny on a police force of big, tough animals isn't so easy. Determined to prove herself, she jumps at the opportunity to crack a case, even if it means partnering with a fast-talking, scam-artist fox, Nick Wilde (voice of Jason Bateman), to solve the mystery.
 
     <!-- This is the link people should click to view more. -->
-    <a href="#" id="more_text_link">More...</a>
+    <a href="#" id="more_text_link" class = "test">More...</a>
 
     <!-- This is the text that should be revealed. -->
     <span id="more_text_content" style="display: none">
